--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "node-nlp": "^5.0.0-alpha.5",
     "pdf-parse": "^2.4.5",
     "tesseract.js": "^7.0.0",
-    "tsx": "^4.19.2"
+    "tsx": "^4.19.2",
+    "undici": "^7.19.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -34,5 +35,8 @@
     "@types/pdf-parse": "^1.1.5",
     "eslint": "^9.17.0",
     "typescript": "^5.9.3"
+  },
+  "overrides": {
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz"
   }
 }
