--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "tsx src/dev-server.ts",
     "dev": "tsx watch src/dev-server.ts",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "build": "tsc -p tsconfig.json"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
