--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "gomandap-server",
   "version": "1.0.0",
   "description": "GoMandap Backend Server",
-  "main": "src/index.ts",
+  "main": "dist/firebase.js",
   "type": "module",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "start": "tsx src/dev-server.ts",
     "dev": "tsx watch src/dev-server.ts",
+    "reset-pwd": "tsx src/reset-admin-pwd.ts",
     "lint": "eslint .",
     "build": "tsc -p tsconfig.json"
   },
@@ -18,6 +22,8 @@
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "firebase-admin": "^12.5.0",
+    "firebase-functions": "^4.4.1",
     "google-auth-library": "^10.5.0",
     "helmet": "^8.1.0",
     "hono": "^4.11.4",
