--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "api/index.cjs", "use": "@vercel/node" }
-  ],
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/api/index.cjs" }
-  ]
+    "version": 2,
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/api/index.ts"
+        }
+    ]
 }
