--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/firebase.js",
   "type": "module",
   "engines": {
-    "node": ">=18"
+    "node": "20.x"
   },
   "scripts": {
     "start": "tsx src/dev-server.ts",
